--- a/print.html
+++ b/print.html
@@ -216,75 +216,122 @@ That is achieved via the <code>/api/v1/milestones/:milestoneId/utxo-changes</cod
 <li><code>coin_identifier</code>: <code>output_id</code></li>
 <li><code>coin_action</code>: either
 <ul>
-<li><code>&quot;UTXO_CONSUMED&quot;</code>, where coins are coming from into the Transaction</li>
-<li><code>&quot;UTXO_CREATED&quot;</code>, where coins are going out from the Transaction</li>
+<li><code>&quot;coin_spent&quot;</code>, where coins are coming from into the Transaction</li>
+<li><code>&quot;coin_created&quot;</code>, where coins are going out from the Transaction</li>
 </ul>
 </li>
 </ul>
 <p><strong>Note:</strong> Rosetta's definition of <a href="https://www.rosetta-api.org/docs/models/CoinAction.html">CoinAction</a> is an <code>enum</code> valued with <code>&quot;coin_spent&quot;</code> and <code>&quot;coin_created&quot;</code>. These terms are analogous to IOTA's <code>&quot;UTXO_CONSUMED&quot;</code> and <code>&quot;UTXO_CREATED&quot;</code>, and <strong>must not be confused</strong> with IOTA's <code>&quot;UTXO_SPENT&quot;</code> and <code>&quot;UTXO_UNSPENT&quot;</code>.</p>
-<p>Here's an example of a Transaction Object:</p>
+<p>Here's an example of two Transaction Objects in the same Milestone:</p>
 <pre><code>{
-   &quot;transaction_identifier&quot;:{
-      &quot;hash&quot;:&quot;fc11e18ab005fe3b1d5ba92dca77a289fe497b3ee41b843526589ec4d5cb9edd&quot;
-   },
-   &quot;operations&quot;:[
+   &quot;transactions&quot;:[
       {
-         &quot;operation_identifier&quot;:{
-            &quot;index&quot;:0,
-            &quot;network_index&quot;:0
+         &quot;transaction_identifier&quot;:{
+            &quot;hash&quot;:&quot;9ce415875aa9ed67c4a3b97cb598861be11444e880fad604ec2a96ee65590da8&quot;
          },
-         &quot;related_operations&quot;:[
+         &quot;operations&quot;:[
             {
-               &quot;index&quot;:1
+               &quot;operation_identifier&quot;:{
+                  &quot;index&quot;:0,
+                  &quot;network_index&quot;:0
+               },
+               &quot;related_operations&quot;:[
+                  
+               ],
+               &quot;type&quot;:&quot;UTXO_OUTPUT&quot;,
+               &quot;status&quot;:&quot;SUCCESS&quot;,
+               &quot;account&quot;:{
+                  &quot;address&quot;:&quot;atoi1q8k69lxuxljdgeqt7tucvtdfk3hrvrly7rzz65w57te6drf3expsjth4u2j&quot;
+               },
+               &quot;amount&quot;:{
+                  &quot;value&quot;:&quot;999880000000&quot;,
+                  &quot;currency&quot;:{
+                     &quot;symbol&quot;:&quot;IOTA&quot;,
+                     &quot;decimals&quot;:0
+                  }
+               },
+               &quot;coin_change&quot;:{
+                  &quot;coin_identifier&quot;:{
+                     &quot;identifier&quot;:&quot;9ce415875aa9ed67c4a3b97cb598861be11444e880fad604ec2a96ee65590da80000&quot;
+                  },
+                  &quot;coin_action&quot;:&quot;coin_created&quot;
+               },
+               &quot;metadata&quot;:{
+                  &quot;is_spent&quot;:&quot;UTXO_SPENT&quot;
+               }
             }
-         ],
-         &quot;type&quot;:&quot;UTXO&quot;,
-         &quot;status&quot;:&quot;UTXO_UNSPENT&quot;,
-         &quot;account&quot;:{
-            &quot;address&quot;:&quot;atoi1qxslutqz5466ucd60d8qrkcl9cw6m6shgnfuyvpdam5442m60kpt7xns4l0&quot;
-         },
-         &quot;amount&quot;:{
-            &quot;value&quot;:&quot;10000000&quot;,
-            &quot;currency&quot;:{
-               &quot;symbol&quot;:&quot;IOTA&quot;,
-               &quot;decimals&quot;:0
-            }
-         },
-         &quot;coin_change&quot;:{
-            &quot;coin_identifier&quot;:{
-               &quot;identifier&quot;:&quot;fc11e18ab005fe3b1d5ba92dca77a289fe497b3ee41b843526589ec4d5cb9edd0000&quot;
-            },
-            &quot;coin_action&quot;:&quot;UTXO_CONSUMED&quot;
-         }
+         ]
       },
       {
-         &quot;operation_identifier&quot;:{
-            &quot;index&quot;:1,
-            &quot;network_index&quot;:1
+         &quot;transaction_identifier&quot;:{
+            &quot;hash&quot;:&quot;586d11477a48a25b4a554686ce8d6cf711be3a85cf07a0dc2d07d4e0f4c03636&quot;
          },
-         &quot;related_operations&quot;:[
+         &quot;operations&quot;:[
             {
-               &quot;index&quot;:0
-            }
-         ],
-         &quot;type&quot;:&quot;UTXO&quot;,
-         &quot;status&quot;:&quot;UTXO_SPENT&quot;,
-         &quot;account&quot;:{
-            &quot;address&quot;:&quot;atoi1q8k69lxuxljdgeqt7tucvtdfk3hrvrly7rzz65w57te6drf3expsjth4u2j&quot;
-         },
-         &quot;amount&quot;:{
-            &quot;value&quot;:&quot;997731000000&quot;,
-            &quot;currency&quot;:{
-               &quot;symbol&quot;:&quot;IOTA&quot;,
-               &quot;decimals&quot;:0
-            }
-         },
-         &quot;coin_change&quot;:{
-            &quot;coin_identifier&quot;:{
-               &quot;identifier&quot;:&quot;fc11e18ab005fe3b1d5ba92dca77a289fe497b3ee41b843526589ec4d5cb9edd0100&quot;
+               &quot;operation_identifier&quot;:{
+                  &quot;index&quot;:0,
+                  &quot;network_index&quot;:0
+               },
+               &quot;related_operations&quot;:[
+                  {
+                     &quot;index&quot;:1
+                  }
+               ],
+               &quot;type&quot;:&quot;UTXO_INPUT&quot;,
+               &quot;status&quot;:&quot;SUCCESS&quot;,
+               &quot;account&quot;:{
+                  &quot;address&quot;:&quot;atoi1q8k69lxuxljdgeqt7tucvtdfk3hrvrly7rzz65w57te6drf3expsjth4u2j&quot;
+               },
+               &quot;amount&quot;:{
+                  &quot;value&quot;:&quot;999870000000&quot;,
+                  &quot;currency&quot;:{
+                     &quot;symbol&quot;:&quot;IOTA&quot;,
+                     &quot;decimals&quot;:0
+                  }
+               },
+               &quot;coin_change&quot;:{
+                  &quot;coin_identifier&quot;:{
+                     &quot;identifier&quot;:&quot;586d11477a48a25b4a554686ce8d6cf711be3a85cf07a0dc2d07d4e0f4c036360000&quot;
+                  },
+                  &quot;coin_action&quot;:&quot;coin_spent&quot;
+               },
+               &quot;metadata&quot;:{
+                  &quot;is_spent&quot;:&quot;UTXO_UNSPENT&quot;
+               }
             },
-            &quot;coin_action&quot;:&quot;UTXO_CREATED&quot;
-         }
+            {
+               &quot;operation_identifier&quot;:{
+                  &quot;index&quot;:1,
+                  &quot;network_index&quot;:1
+               },
+               &quot;related_operations&quot;:[
+                  {
+                     &quot;index&quot;:0
+                  }
+               ],
+               &quot;type&quot;:&quot;UTXO_INPUT&quot;,
+               &quot;status&quot;:&quot;SUCCESS&quot;,
+               &quot;account&quot;:{
+                  &quot;address&quot;:&quot;atoi1q86v9cgc8d9ue9nd9k4z8rp2dn29mcwf2y9jhm59u8dg25aukhq3jqwwfvf&quot;
+               },
+               &quot;amount&quot;:{
+                  &quot;value&quot;:&quot;10000000&quot;,
+                  &quot;currency&quot;:{
+                     &quot;symbol&quot;:&quot;IOTA&quot;,
+                     &quot;decimals&quot;:0
+                  }
+               },
+               &quot;coin_change&quot;:{
+                  &quot;coin_identifier&quot;:{
+                     &quot;identifier&quot;:&quot;586d11477a48a25b4a554686ce8d6cf711be3a85cf07a0dc2d07d4e0f4c036360100&quot;
+                  },
+                  &quot;coin_action&quot;:&quot;coin_spent&quot;
+               },
+               &quot;metadata&quot;:{
+                  &quot;is_spent&quot;:&quot;UTXO_UNSPENT&quot;
+               }
+            }
+         ]
       }
    ]
 }
